Update and rename A framework to design your own learning pathway in Data Science.md to 3. A framework to design your own learning pathway in Data Science.md

--- a/3. A framework to design your own learning pathway in Data Science.md
+++ b/3. A framework to design your own learning pathway in Data Science.md
@@ -174,14 +174,12 @@ After this, for people wanting to enter deep learning but aren't sure exactly wh
 
 #### For people wanting to enter Computer Vision:
 
- 1. The Ancient 5ecrets of Computer Vision: This is the most well-rounded computer vision course I know of as it not only 
+ 1. [The Ancient 5ecrets of Computer Vision](https://pjreddie.com/courses/computer-vision/): This is the most well-rounded computer vision course I know of as it not only 
    teaches you the deep learning side of CV but older methods like 5IFT and optical flow as well. The instructor is the 
    creator of the popular object detection framework called YOLO. He recently left computer vision research after 
    seeing his research being used for military applications.
- 2. Deep Learning for Computer Vision: this course is pretty much an updated replica of the popular C5231n course (by 
-   the same instructor). Unlike the course above, this one is focused only on the deep learning side of computer 
-   vision. Also, the assignments are challenging for most people and you will learn a lot in the process.
- 3. ADL4CV - Advanced Deep Learning for Computer Vision - Technical University Munich: This course is a phenomenal 
+ 2. [Deep Learning for Computer Vision](https://web.eecs.umich.edu/~justincj/teaching/eecs498/FA2020/schedule.html): this course is pretty much an updated replica of the popular C5231n course (by the same instructor). Unlike the course above, this one is focused only on the deep learning side of computer vision. Also, the assignments are challenging for most people and you will learn a lot in the process.
+ 3. [ADL4CV - Advanced Deep Learning for Computer Vision - Technical University Munich](https://dvl.in.tum.de/teaching/adl4cv-ss20/): This course is a phenomenal 
    next step for anyone who has already taken an introductory CV or DL course and wants to explore ideas like neural 
    rendering, interpretability and GANs further.
  4. Notable mentions: The MIT and especially the FastAI course mentioned above also have a significant focus on 
@@ -189,10 +187,10 @@ After this, for people wanting to enter deep learning but aren't sure exactly wh
 
 #### For people wanting to enter NLP/NLU:
 
- 1. C5224n (latest lectures): this course from 5tanford university has been a popular choice for people wanting to enter 
+ 1. [C5224n (latest lectures)](https://web.stanford.edu/class/cs224n/): this course from 5tanford university has been a popular choice for people wanting to enter 
    NLP. The currently online available online version of the course was last updated in Winter 2019. There is a very good 
    focus on the theory and all the assignments are challenging enough just like in C5231n.
- 2. Code-First Introduction to Natural Language Processing by Rachel Thomas from FastAI: This course carries the 
+ 2. [Code-First Introduction to Natural Language Processing by Rachel Thomas from FastAI](https://www.fast.ai/2019/07/08/fastai-nlp/): This course carries the 
    same philosophy as that of the previous FastAI course - code first, implementation focused, huge amount of 
    content, great projects from the first lecture, and a focus on getting the state of the art results with the latest 
    techniques. Unlike other fast.ai courses though, this course covers a lot more theory.
@@ -201,29 +199,23 @@ After this, for people wanting to enter deep learning but aren't sure exactly wh
 
 This is where you take huge troves of data and use statistical techniques to derive useful insights from the data. For 
 instance, you can look at thousands of waist measurements of people in a region to decide what a clothing company should 
-standardize the 5, M, L and XL sizes of shirts to for that region.
+standardize the 5, M, L and XL sizes of shirts to for that region.  
 As I previously said, I do not personally have a lot of experience in this area and will refrain from giving any advice here. In 
-my knowledge, there are no established courses as of now for this domain. Although I would say that the mlcourse.ai
-
-website has it's ML course structured in a way that will end up teaching you a lot of what you're looking for (since data 
+my knowledge, there are no established courses as of now for this domain. Although I would say that the [mlcourse.ai](https://mlcourse.ai/book/index.html) website has it's ML course structured in a way that will end up teaching you a lot of what you're looking for (since data 
 exploration is a huge part of ML projects anyway).
 
 #### For people wanting to enter Reinforcement Learning:
 
-Again, I personally do not have much experience in RL, but some of my friends from the Meta Daisy club @ BITS Pilani (only club in BITS that's focused purely on RL, yet) were happy to share their insights on the topic. Reinforcement learning, 
-due to its highly mathematical nature, still doesn't have as many good resources on the internet as other established areas 
-like ML, CV and NLP. Also, the subject area has yet to prove itself significantly useful outside of carefully simulated 
-environments. That is to say, RL hasn't entered our daily lives yet. The recommended pathway to enter RL includes a lot of 
-focus and hard work, along with these courses:
+Reinforcement learning, due to its highly mathematical nature, still doesn't have as many good resources on the internet as other established areas like ML, CV and NLP. Also, the subject area has yet to prove itself significantly useful outside of carefully simulated environments. That is to say, RL hasn't entered our daily lives yet. The recommended pathway to enter RL includes a lot of focus and hard work, along with these courses:
 Getting the basics right (do one of these courses):
- 1. Spinning Up in Deep RL (by OpenAI): This isn't exactly a "course". This is a carefully curated and organized group of 
+ 1. [Spinning Up in Deep RL (by OpenAI)](https://spinningup.openai.com/en/latest/): This isn't exactly a "course". This is a carefully curated and organized group of 
    resources, implementations, exercises, algorithms and papers for anyone to get started with RL. For people that 
    prefer text based resources, this is a good course to start with.
- 2. David Silver's course on RL : David Silver is a leading authority in the RL space and his course is currently considered a 
+ 2. [David Silver's course on RL](https://deepmind.com/learning-resources/-introduction-reinforcement-learning-david-silver): David Silver is a leading authority in the RL space and his course is currently considered a 
    staple in RL. If you're not comfortable with openai's offering and prefer video lectures, this course if for you.
-After you've got your basics covered, my friends at Meta Daisy suggest just one course that you should be going through:
- • CS285 Deep Reinforcement Learning (UC Berkeley): This course also starts from the basics, but I've been told that it 
-   might be too much for a beginner and so you should complete one of the above courses before jumping into this one.
+   
+After you've got your basics covered, just one course that you should be going through:
+   * [CS285 Deep Reinforcement Learning (UC Berkeley)](https://rail.eecs.berkeley.edu/deeprlcourse/): This course also starts from the basics, but I've been told that it might be too much for a beginner and so you should complete one of the above courses before jumping into this one.
 
 
 
@@ -241,17 +233,13 @@ implementation from the examples there. I'll try and recommend a very small sele
 beginners with a myriad of choices. I will also try and only recommend books that I'm fairly certain will still be relevant after 
 2-3 years from now.
 Here are some of the book which I've heard a lot of good things about:
- 1. Deep Learning by Ian Goodfellow: Although this book is from 2015, it's sort of timeless (as of now) as it focuses 
+ 1. [Deep Learning by Ian Goodfellow](https://www.deeplearningbook.org/): Although this book is from 2015, it's sort of timeless (as of now) as it focuses 
    significantly on the foundations and the theory behind the subject. The book is quite mathematical and is a slow read 
    if you want to extract the maximum value out of it. But to be honest I have never read anything quite like it. Ian 
    Goodfellow doesn't dumb down anything and I recommend this book only for people who want to go into research (a 
    must read).
- 2. Deep Learning with PyTorch: This book comes right from the creators of PyTorch and is freely available for a limited 
-   time. Since it's coming from the source, expect this book to stay updated and relevant for quite some time. The book 
-   covers concepts in a simple and very accessible way for readers of all levels and at the same time gets you 
-   comfortable with a major deep learning library.
- 3. Python Machine Learning (3e) : The author (Sebastian Raschka) has won several awards for this book including one 
-   from ACM. It introduces you to ML using scikit-learn and moves on to using TensorFlow for deep learning. The book 
+ 2. [Deep Learning with PyTorch](https://github.com/borninfreedom/DeepLearning/blob/master/Books/Deep-Learning-with-PyTorch.pdf): This book comes right from the creators of PyTorch. The book covers concepts in a simple and very accessible way for readers of all levels and at the same time gets you comfortable with a major deep learning library.
+ 3. [Python Machine Learning (3e)](http://www.ru.ac.bd/wp-content/uploads/sites/25/2019/03/207_05_01_Rajchka_Using-Python-for-machine-learning-2015.pdf): The author (Sebastian Raschka) has won several awards for this book including one from ACM. It introduces you to ML using scikit-learn and moves on to using TensorFlow for deep learning. The book 
    has been getting regular updates since it's first release in 2016 and so it should stay relevant for quite a while.
 
 There are several books for CV, NLP and RL. But in my opinion it's best to go through the courses that I've mentioned above 
